<resources>
    <string name="app_name">爱传</string>
    <string name="title_activity_ftp_manager">FtpManagerActivity</string>
    <string name="title_activity_receive_from_computer">ReceiveFromComputerActivity</string>
    <string name="title_activity_send_to_computer">SendToComputerActivity</string>

    <!-- capture activity-->
    <string name="activity_captere_ip">网址：itransfer.coselding.cn</string>
    <string name="activity_capture_text_tip">扫码失败？方式二</string>
    <string name="activity_capture_text_tip2">请扫描二维码进行文件传输</string>

    <!-- chose file activity-->
    <string name="activity_chose_file">请选择文件</string>

    <!-- ftp manager activity-->
    <string name="activity_ftp_manager_tip1">1, 将手机和电脑置于同一局域网下</string>
    <string name="activity_ftp_manager_tip2">2, 打开文件管理器</string>
    <string name="activity_ftp_manager_tip3">3,在地址栏中输入</string>

    <!-- main activity-->
    <string name="activity_main_send">发送文件</string>
    <string name="activity_main_receive">接收文件</string>

    <!-- receive from computer activity-->
    <string name="activity_receive_from_computer_no_message">文件信息没有获取</string>
    <string name="activity_receive_from_computer_download">下载文件</string>

    <!-- scan layout-->
    <string name="scan_tip">请点击对方头像进行文件传输</string>

    <!-- chose to computer dialog layout-->
    <string name="dialog_chose_have">有网传输</string>
    <string name="dialog_chose_no">局域网传输</string>

    <!-- receive file dialog-->
    <string name="dialog_receive_file_fileCode">请输入文件ID</string>
    <string name="dialog_receive_file_password">请输入校验码</string>

    <!-- rename file dialog-->
    <string name="dialog_rename_file">请输入新的文件名</string>

    <!-- -->


    <string name="swiftp_name">FTP Server</string>
    <string name="swiftp_name_free">FTP Server (Free)</string>
    <string name="swiftp_name_demo">FTP Server (Demo)</string>
    <string name="running_label">FTP Server</string>
    <string name="running_summary_stopped">Toggle the state of the ftp server</string>
    <string name="running_summary_started">at %s</string>
    <string name="running_summary_failed">Failed to start the FTP server, not connected to the local network (wifi or ethernet)?</string>
    <string name="market_version_label">Market version</string>
    <string name="market_version_summary">
        This is the FTP Server Demo version.
        Support development by getting the FTP Server from the android market.
        Click here to go to the market.</string>
    <string name="settings_label">Settings</string>
    <string name="user_label">User</string>
    <string name="loginsettings_label">Login settings...</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="show_password_label">Display password</string>
    <string name="anonymous_label">Anonymous</string>
    <string name="allow_anonymous_label">Allow anonymous login</string>
    <string name="anonymous_summary">Anonymous logins are only allowed read access</string>
    <string name="advancedsettings_label">Advanced settings...</string>
    <string name="portnumber_label">Port Number</string>
    <string name="chroot_label">Stay in folder</string>
    <string name="acceptwifi_label">Accept connection from wifi</string>
    <string name="wakelock_label">Keep device awake (full CPU speed)</string>
    <string name="extra_label">Extra</string>
    <string name="help_label">Help...</string>
    <string name="about_label">About...</string>
    <string name="help_dlg_title">FTP Server Help</string>
    <string name="help_dlg_message">\
Thanks for using FTP Server (SwiFTP)! Here are some brief usage instructions. More
information can be found at http://ppareit.github.com/swiftp/.\n\n\
\
This program allows you to run an ftp server on your android device. This means that any
program can access the files on your device while the ftp server is running. For example,
entering \'ftp://...\' in the firefox url bar will allow you to browse the files on your
device from a desktop pc or a laptop.\n\n
\
By default, the user name and password are both \'ftp\', you should change them. You use
this username and password when accessing the server.\n\n
\
There is a configuration option (\"keep phone awake\") that fixes a problem where
file transfers go slow or stop completely when the phone sleeps. If you have this
problem, check this box and restart the program. Your phone will stay awake as long as
the server is running.\n\n
\
For power and security reasons, it is recommended that the server be stopped after use.\n\n\
\
If something is not working the way you expect it to, please report it to Pieter Pareit
(pieter.pareit@gmail.com).\n\n\
\
The development of this open source program is supported by buying this program through
the google play store. You can follow the development at https://github.com/ppareit/swiftp .
To have an idea on the features that will be implemented, see the issue tracker at
https://github.com/ppareit/swiftp/issues .\n\n
    </string>
    <string name="about_dlg_title">FTP Server About</string>
    <string name="about_dlg_message">
        <b>Description: </b>
        FTP Server (SwiFTP) allows you to run an ftp server on your android device.\n\n\
        <b>Website:</b>
        http://ppareit.github.com/swiftp/\n\n
        <b>Current maintainer:</b>
        Pieter Pareit (pieter.pareit@gmail.com)\n\n
        <b>Programming: </b>\
        Dave Revell (dave.revell@gmail.com), Pieter Pareit (pieter.pareit@gmail.com)\n\n\
        <b>Artwork:</b>
        Birgit Niemegeers\n\n
        <b>License: </b>
        GNU General Public License v3.0\n\n
    </string>
    <string name="notif_server_starting">Starting at %s</string>
    <string name="notif_title">ftp文件管理正在启用</string>
    <string name="notif_text">地址： %s</string>
    <string name="notif_stop_text">Stop server</string>

    <string name="nsd_servername_postfix">FTP Server</string>

    <string name="select">Select</string>
    <string name="cancel">Cancel</string>

    <string name="feedback">Send feedback</string>
    <string name="about">About</string>

    <string name="autoconnect_label">Autoconnect settings...</string>
    <string name="autoconnect_summary">Select the wifi networks on which to autoconnect</string>
    <string name="autoconnect_error_enable_wifi_for_access_points">
        Enable wifi to get list of access points
    </string>

    <!-- old strings -->
    <string name="cant_get_url">Can\'t retrieve url</string>
    <string name="unknown">unknown</string>
    <string name="ok">OK</string>
    <string name="username_validation_error">The password must consist of 1 or more alphanumeric characters. No other characters are allowed.</string>
    <string name="password_validation_error">The password must consist of 1 or more alphanumeric characters. No other characters are allowed.</string>
    <string name="port_validation_error">The port number must be in the range 1 to 65535.</string>
    <string name="wifi_state_receiver_label">WifiStateReceiver</string>
    <string name="pst_connecting">connecting</string>
    <string name="pst_connected">connected</string>
    <string name="pst_failed">failed</string>
    <string name="pst_unreachable">unreachable</string>
    <string name="pst_disconnected">disconnected</string>
    <string name="storage_warning">Warning: storage is not available. You may want to unmount it.</string>
    <string name="widget_name">FTP Server Widget</string>
    <string name="notif_settings_text">Settings</string>

</resources>
